// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly by default 1`] = `
<div
  class="list-box-and-error-container"
  data-testid="select"
>
  <label
    id="stuff-label"
    style="font-size: 1.5rem;"
  >
    Stuff
  </label>
  <div
    aria-label="Stuff"
    aria-labelledby="stuff-label"
    class="list-box-container"
    style="font-size: 1.2rem;"
  >
    <button
      aria-expanded="false"
      aria-haspopup="listbox"
      class="button"
      data-testid="select-button"
      type="button"
    >
      Foo
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M12.53 16.28a.75.75 0 01-1.06 0l-7.5-7.5a.75.75 0 011.06-1.06L12 14.69l6.97-6.97a.75.75 0 111.06 1.06l-7.5 7.5z"
          fill-rule="evenodd"
        />
      </svg>
    </button>
    <ul
      aria-activedescendant="Foo"
      class="list"
      data-testid="select-list"
      role="listbox"
      style="display: none;"
      tabindex="-1"
    >
      <li
        aria-selected="true"
        class="item selected"
        data-testid="data-foo"
        role="option"
        tabindex="0"
      >
        Foo
      </li>
      <li
        aria-selected="false"
        class="item"
        data-testid="data-bar"
        role="option"
        tabindex="0"
      >
        Bar
      </li>
      <li
        aria-selected="false"
        class="item"
        data-testid="data-baz"
        role="option"
        tabindex="0"
      >
        Baz
      </li>
      <li
        aria-selected="false"
        class="item"
        data-testid="data-qux"
        role="option"
        tabindex="0"
      >
        Qux
      </li>
    </ul>
  </div>
</div>
`;

exports[`renders correctly with error state 1`] = `
<div
  class="list-box-and-error-container"
  data-testid="select"
>
  <label
    id="stuff-label"
    style="font-size: 1.5rem;"
  >
    Stuff
  </label>
  <div
    aria-label="Stuff"
    aria-labelledby="stuff-label"
    class="list-box-container error"
    style="font-size: 1.2rem;"
  >
    <button
      aria-expanded="false"
      aria-haspopup="listbox"
      class="button"
      data-testid="select-button"
      type="button"
    >
      Foo
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M12.53 16.28a.75.75 0 01-1.06 0l-7.5-7.5a.75.75 0 011.06-1.06L12 14.69l6.97-6.97a.75.75 0 111.06 1.06l-7.5 7.5z"
          fill-rule="evenodd"
        />
      </svg>
    </button>
    <ul
      aria-activedescendant="Foo"
      class="list"
      data-testid="select-list"
      role="listbox"
      style="display: none;"
      tabindex="-1"
    >
      <li
        aria-selected="true"
        class="item selected"
        data-testid="data-foo"
        role="option"
        tabindex="0"
      >
        Foo
      </li>
      <li
        aria-selected="false"
        class="item"
        data-testid="data-bar"
        role="option"
        tabindex="0"
      >
        Bar
      </li>
      <li
        aria-selected="false"
        class="item"
        data-testid="data-baz"
        role="option"
        tabindex="0"
      >
        Baz
      </li>
      <li
        aria-selected="false"
        class="item"
        data-testid="data-qux"
        role="option"
        tabindex="0"
      >
        Qux
      </li>
    </ul>
  </div>
  <div
    class="error-message"
    style="font-size: 1.5rem;"
  >
    Your value sucks
  </div>
</div>
`;

exports[`renders correctly with searchable state 1`] = `
<div
  class="list-box-and-error-container"
  data-testid="select"
>
  <label
    id="stuff-label"
    style="font-size: 1.5rem;"
  >
    Stuff
  </label>
  <div
    aria-label="Stuff"
    aria-labelledby="stuff-label"
    class="list-box-container"
    style="font-size: 1.2rem;"
  >
    <button
      aria-expanded="false"
      aria-haspopup="listbox"
      class="button"
      data-testid="select-button"
      type="button"
    >
      Foo
      <svg
        aria-hidden="true"
        class="icon"
        fill="currentColor"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M12.53 16.28a.75.75 0 01-1.06 0l-7.5-7.5a.75.75 0 011.06-1.06L12 14.69l6.97-6.97a.75.75 0 111.06 1.06l-7.5 7.5z"
          fill-rule="evenodd"
        />
      </svg>
    </button>
    <ul
      aria-activedescendant="Foo"
      class="list"
      data-testid="select-list"
      role="listbox"
      style="display: none; min-width: 10rem;"
      tabindex="-1"
    >
      <li
        class="item"
        style="cursor: auto; position: sticky; top: 0px;"
        tabindex="-1"
      >
        <input
          class="search-input"
          type="text"
          value=""
        />
        <svg
          aria-hidden="true"
          class="search-icon"
          fill="currentColor"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M9 3.5a5.5 5.5 0 100 11 5.5 5.5 0 000-11zM2 9a7 7 0 1112.452 4.391l3.328 3.329a.75.75 0 11-1.06 1.06l-3.329-3.328A7 7 0 012 9z"
            fill-rule="evenodd"
          />
        </svg>
      </li>
      <li
        aria-selected="true"
        class="item selected"
        data-testid="data-foo"
        role="option"
        tabindex="0"
      >
        Foo
      </li>
      <li
        aria-selected="false"
        class="item"
        data-testid="data-bar"
        role="option"
        tabindex="0"
      >
        Bar
      </li>
      <li
        aria-selected="false"
        class="item"
        data-testid="data-baz"
        role="option"
        tabindex="0"
      >
        Baz
      </li>
      <li
        aria-selected="false"
        class="item"
        data-testid="data-qux"
        role="option"
        tabindex="0"
      >
        Qux
      </li>
      <li
        aria-selected="false"
        class="item"
        data-testid="data-bruh"
        role="option"
        tabindex="0"
      >
        Bruh
      </li>
      <li
        aria-selected="false"
        class="item"
        data-testid="data-spam"
        role="option"
        tabindex="0"
      >
        Spam
      </li>
      <li
        aria-selected="false"
        class="item"
        data-testid="data-eggs"
        role="option"
        tabindex="0"
      >
        Eggs
      </li>
      <li
        aria-selected="false"
        class="item"
        data-testid="data-something"
        role="option"
        tabindex="0"
      >
        Something
      </li>
      <li
        aria-selected="false"
        class="item"
        data-testid="data-ahoy"
        role="option"
        tabindex="0"
      >
        Ahoy
      </li>
      <li
        aria-selected="false"
        class="item"
        data-testid="data-m80"
        role="option"
        tabindex="0"
      >
        M80
      </li>
    </ul>
  </div>
</div>
`;
